<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio"
    tools:context=".LOGIN">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="701dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/LogoHL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            app:srcCompat="@drawable/logo" />


        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="9"
            android:background="@drawable/edt_style"
            android:drawableLeft="@drawable/usuario"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/User1"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="9"
            android:background="@drawable/edt_style"
            android:drawableLeft="@drawable/candado"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/PASSWORD1"
            android:inputType="text" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="10"
            android:background="@drawable/btn_style"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal"
            android:gravity="center|top">

            <ImageButton
                android:id="@+id/imgbtnGmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                app:srcCompat="@drawable/gmail" />

            <ImageButton
                android:id="@+id/imgBtnPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                app:srcCompat="@drawable/phone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRecoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecoverPassword"
            android:gravity="center|top"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>